syntax = "proto3";
package ethereum;
//option go_package = "./ethereum";


import "ethereum/transaction.message.proto";

service EthereumTransaction {
	rpc GetReceipt(GetReceiptInput) returns (GetReceiptOutput);
	rpc SendRawTransaction(SendRawTransactionInput) returns (SendRawTransactionOutput);
	rpc Transfer(TransferInput) returns (TransferOutput);
	rpc GetBlockNumber(GetBlockNumberInput) returns (GetBlockNumberOutput);
	rpc GetBlocks(GetBlocksInput) returns (GetBlocksOutput);
}